tests/sum-types/ill-typed/bad-sum-types-9.stella
language core;
extend with #sum-types;

fn g(x : Nat + (Bool + (fn(Nat) -> Nat))) -> Nat {
  return match x {
      inl(n) => succ(n)
    | inr(bf) => match bf {
          inr(f) => f(f(succ(0)))
        | inl(b) => if b then succ(0) else 0
      }
  }
}

fn main(x : Nat) -> Nat {
  return g(inr(inl(fn(n : Nat) { return g(inl(n)) })))
}
